small addition to our page content

--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,6 @@
 	<title>Hello Again World</title>
 </head>
 <body>
-<h1>Hi Coursea</h1>
+<h1>Hi Coursea, thanks for teaching me to code.</h1>
 </body>
 </html>
